--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -1,4 +1,6 @@
+derivs_all.o: fftsg.o problem_class.o
 initialize.o: constants.o problem_class.o
 input.o: problem_class.o
 main.o: initialize.o input.o problem_class.o solve_master.o
-solve_master.o: constants.o fftsg.o ode_bs.o problem_class.o
+ode_bs.o: derivs_all.o problem_class.o
+solve_master.o: constants.o derivs_all.o ode_bs.o problem_class.o
