--- a/trunk/src/Makefile.depend
+++ b/trunk/src/Makefile.depend
@@ -3,4 +3,5 @@ initialize.o: constants.o problem_class.o
 input.o: problem_class.o
 main.o: initialize.o input.o problem_class.o solve_master.o
 ode_bs.o: derivs_all.o problem_class.o
+problem_class.o: output.o
 solve_master.o: constants.o derivs_all.o ode_bs.o problem_class.o
