--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -1,4 +1,5 @@
-derivs_all.o: fftsg.o problem_class.o
+calc.o: problem_class.o
+derivs_all.o: calc.o fftsg.o problem_class.o
 initialize.o: constants.o problem_class.o
 input.o: problem_class.o
 main.o: initialize.o input.o problem_class.o solve_master.o
