--- a/trunk/src/Makefile.depend
+++ b/trunk/src/Makefile.depend
@@ -1,8 +1,10 @@
-calc.o: problem_class.o
-derivs_all.o: calc.o fftsg.o problem_class.o
-initialize.o: constants.o problem_class.o
+calc.o: fftsg.o problem_class.o
+derivs_all.o: calc.o problem_class.o
+initialize.o: constants.o output.o problem_class.o
 input.o: problem_class.o
 main.o: initialize.o input.o problem_class.o solve_master.o
 ode_bs.o: derivs_all.o problem_class.o
+output.o: problem_class.o
 problem_class.o: output.o
-solve_master.o: constants.o derivs_all.o ode_bs.o problem_class.o
+solve_master.o: derivs_all.o output.o problem_class.o solver_acc.o
+solver_acc.o: output.o problem_class.o
