--- a/trunk/src/Makefile.depend
+++ b/trunk/src/Makefile.depend
@@ -4,7 +4,6 @@ initialize.o: constants.o output.o problem_class.o
 input.o: problem_class.o
 main.o: initialize.o input.o problem_class.o solve_master.o
 ode_bs.o: derivs_all.o problem_class.o
-output.o: problem_class.o
-problem_class.o: output.o
+output.o: constants.o problem_class.o
 solve_master.o: derivs_all.o output.o problem_class.o solver_acc.o
 solver_acc.o: output.o problem_class.o
