more refactoring: inputs, mesh

--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -1,7 +1,7 @@
 derivs_all.o: fault_stress.o problem_class.o
 fault_stress.o: constants.o fftsg.o mesh.o okada.o
 initialize.o: constants.o fault_stress.o mesh.o output.o problem_class.o
-input.o: problem_class.o
+input.o: mesh.o problem_class.o
 main.o: initialize.o input.o problem_class.o solve_master.o
 mesh.o: constants.o
 ode_bs.o: derivs_all.o problem_class.o
