Adde simulation as Kato's with and without deeper weakening patch,added new and modified existing plotting scripts

--- a/kernel_gen/Makefile
+++ b/kernel_gen/Makefile
@@ -6,7 +6,8 @@ F90 = ifort
 OPT = -O0 -C 
 
 OBJS1 = calc_kernel.f90 dc3d_notag.f kernel_gen_3D.f90
-OBJS2 = calc_kernel.f90 dc3d_notag.f kernel_gen_3D_c.f90 
+OBJS2 = calc_kernel.f90 dc3d_notag.f kernel_gen_3D_c.f90
+
 
 kernel_gen_3D: $(OBJS1)
 	$(F90) $(OPT) -o $(EXEC1)  $(OBJS1)
@@ -14,5 +15,6 @@ kernel_gen_3D: $(OBJS1)
 kernel_gen_3D_c: $(OBJS2)
 	$(F90) $(OPT) -o $(EXEC2)  $(OBJS2)
 
+
 clean:
-	rm $(EXEC1)  $(EXEC2)
+	rm $(EXEC1)  $(EXEC2) $(EXEC3) 
