--- a/trunk/src/Makefile
+++ b/trunk/src/Makefile
@@ -17,10 +17,10 @@ EXEC = $(HOME)/bin/qdyn
 
 #-- Intel Fortran --
 F90 = ifort
-#OPT = -O3 -ip -ipo -unroll
+OPT = -O3 -ip -ipo -unroll
 #-no-inline-factor
 #OPT = -O3
- OPT = -O0 -warn all -C
+# OPT = -O0 -warn all -C
 #OPT = -O0 -warn all -parallel -par-report3  -C
 #OPT = -O0 -g
 
