--- a/src/Makefile
+++ b/src/Makefile
@@ -9,14 +9,15 @@ EXEC = $(HOME)/bin/qdyn
 # 2. Comment/uncomment/add/modify the lines corresponding to your compiler:
 
 # GNU 
-#F90 = g95
-#OPT = 
 #F90 = gfortran
 #OPT = -O3 -Wall
-#OPT = -O3 
+# For parallel runs with OpenMP:
+#OPT = -O3 -fopenmp
 
 #-- Intel Fortran --
 F90 = ifort
+#OPT = -O3 -ip -ipo
+# For parallel runs with OpenMP:
 OPT = -O3 -ip -ipo -parallel -openmp -par-threshold:50
 #-no-inline-factor
 #OPT = -O3
