--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,8 @@
 # yingdi
 #EXEC = $(HOME)/qdyn_svn/trunk/src/qdyn 
 # pablo
-EXEC = $(HOME)/bin/qdyn 
+#EXEC = $(HOME)/bin/qdyn 
+ EXEC = ./qdyn
 
 # 2. Comment/uncomment/add/modify the lines corresponding to your compiler:
 
