--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -5,7 +5,7 @@ initialize.o: constants.o fault_stress.o friction.o mesh.o output.o \
 	problem_class.o
 input.o: mesh.o problem_class.o
 main.o: initialize.o input.o problem_class.o solver.o
-mesh.o: constants.o
+mesh.o: constants.o okada.o
 ode_bs.o: derivs_all.o problem_class.o
 okada.o: constants.o
 output.o: constants.o problem_class.o
