--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -1,5 +1,5 @@
 derivs_all.o: fault_stress.o friction.o problem_class.o
-fault_stress.o: constants.o fftsg.o mesh.o okada.o
+fault_stress.o: constants.o fftsg.o mesh.o okada.o parallel.o utils.o
 friction.o: problem_class.o
 initialize.o: constants.o fault_stress.o friction.o mesh.o output.o \
 	problem_class.o
