--- a/src/Makefile
+++ b/src/Makefile
@@ -13,10 +13,10 @@
 #F90 = gfortran
 #MPI
 F90 = mpif90
-#OPT = -O3 -Wall
+OPT = -O3 -Wall
 # For parallel runs with OpenMP:
 #OPT = -O3 -fopenmp
-OPT = -O2 -w
+#OPT = -O2 -w
 #-- Intel Fortran --
 #F90 = ifort
 #OPT = -O3 -ip -ipo
