--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -10,4 +10,4 @@ ode_bs.o: derivs_all.o problem_class.o
 okada.o: constants.o
 output.o: constants.o problem_class.o
 problem_class.o: fault_stress.o mesh.o
-solver.o: derivs_all.o friction.o ode_bs.o output.o problem_class.o
+solver.o: derivs_all.o friction.o ode_bs.o output.o problem_class.o fault_stress.o constants.o
