--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -1,13 +1,13 @@
 derivs_all.o: fault_stress.o friction.o problem_class.o
-fault_stress.o: constants.o fftsg.o mesh.o okada.o parallel.o utils.o
+fault_stress.o: constants.o fftsg.o mesh.o okada.o utils.o parallel.o 
 friction.o: problem_class.o
 initialize.o: constants.o fault_stress.o friction.o mesh.o output.o \
 	problem_class.o
-input.o: mesh.o problem_class.o constants.o
+input.o: mesh.o problem_class.o constants.o parallel.o
 main.o: initialize.o input.o problem_class.o solver.o
 mesh.o: constants.o 
-ode_bs.o: derivs_all.o problem_class.o
+ode_bs.o: derivs_all.o problem_class.o parallel.o 
 okada.o: constants.o
 output.o: constants.o problem_class.o
 problem_class.o: fault_stress.o mesh.o
-solver.o: derivs_all.o friction.o ode_bs.o output.o problem_class.o fault_stress.o constants.o
+solver.o: derivs_all.o ode_bs.o output.o constants.o
