--- a/src/Makefile
+++ b/src/Makefile
@@ -22,8 +22,8 @@ F90 = mpif90
 # For parallel runs with OpenMP:
 #OPT = -O3 -ip -ipo -parallel -openmp -par-threshold:50
 #-no-inline-factor
-#OPT = -O3
-OPT = -O0 -warn all -C
+OPT = -O3
+#OPT = -O0 -warn all -C
 #OPT = -O0 -warn all -parallel -par-report3  -C
 #OPT = -O0 -g
 #OPT = -O3 -ip -ipo -arch SSE2 -tpp7 -xN # pablo.ethz.ch
