--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -5,10 +5,10 @@ initialize.o: constants.o fault_stress.o friction.o mesh.o output.o \
 	parallel.o problem_class.o
 input.o: constants.o mesh.o parallel.o problem_class.o
 main.o: initialize.o input.o parallel.o problem_class.o solver.o
-mesh.o: constants.o
+mesh.o: constants.o parallel.o
 ode_bs.o: derivs_all.o parallel.o problem_class.o
 okada.o: constants.o
-output.o: constants.o fault_stress.o parallel.o problem_class.o
+output.o: constants.o mesh.o parallel.o problem_class.o
 parallel.o: constants.o
 problem_class.o: fault_stress.o mesh.o
 solver.o: derivs_all.o friction.o ode_bs.o output.o parallel.o \
