--- a/src/Makefile
+++ b/src/Makefile
@@ -22,8 +22,8 @@ F90 = mpif90
 # For parallel runs with OpenMP:
 #OPT = -O3 -ip -ipo -parallel -openmp -par-threshold:50
 #-no-inline-factor
-#OPT = -O3
-OPT = -O0 -warn all -C
+OPT = -O3
+#OPT = -O0 -warn all -C
 #OPT = -O0 -warn all -parallel -par-report3  -C
 #OPT = -O0 -g
 #OPT = -O3 -ip -ipo -arch SSE2 -tpp7 -xN # pablo.ethz.ch
@@ -38,6 +38,12 @@ OPT = -O0 -warn all -C
 #-- Digital --
 #F90 = f95
 #OPT = -fast
+
+# 3. Set the compiler option that enables preprocessing in your compiler
+# ifort
+PREPROC = -fpp
+# gfortran
+#PREPROC = -cpp
 
 #== END USER SETTINGS =============================================
 
@@ -60,8 +66,11 @@ clean:
 %.o: %.f90
 	$(F90) $(OPT) -c $<
 
+# A special compilation rule for constants.f90: 
+# Use a preprocessor directive (fpp) to define the path to the source files
+# This is needed only to find the kernel files
 constants.o: constants.f90
-	$(F90) $(OPT) -D_FPP_PWD_=$(CURDIR) -c $<
+	$(F90) $(OPT) $(PREPROC) -D_FPP_SRC_PATH_="'$(CURDIR)'" -c $<
 
 include Makefile.depend
 # DO NOT DELETE
