reorganized input reading and initialization

--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -3,7 +3,7 @@ fault_stress.o: constants.o fftsg.o mesh.o okada.o parallel.o utils.o
 friction.o: problem_class.o
 initialize.o: constants.o fault_stress.o friction.o mesh.o output.o \
 	parallel.o problem_class.o
-input.o: mesh.o parallel.o problem_class.o
+input.o: mesh.o output.o parallel.o problem_class.o
 main.o: initialize.o input.o parallel.o problem_class.o solver.o
 mesh.o: constants.o parallel.o
 ode_bs.o: derivs_all.o parallel.o problem_class.o
