--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -2,14 +2,16 @@ derivs_all.o: fault_stress.o friction.o problem_class.o
 fault_stress.o: constants.o fftsg.o mesh.o okada.o parallel.o utils.o
 friction.o: constants.o problem_class.o
 initialize.o: constants.o fault_stress.o friction.o mesh.o output.o \
-	parallel.o problem_class.o
+	parallel.o problem_class.o solver.o
 input.o: mesh.o output.o parallel.o problem_class.o
-main.o: initialize.o input.o parallel.o problem_class.o solver.o
+main.o: derivs_all.o initialize.o input.o parallel.o problem_class.o solver.o
 mesh.o: constants.o parallel.o
 ode_bs.o: derivs_all.o parallel.o problem_class.o
+ode_lsoda_aux1.o: ode_lsoda_aux2.o
+ode_lsoda_main.o: derivs_all.o ode_lsoda_aux1.o ode_lsoda_aux2.o
 okada.o: constants.o
 output.o: constants.o mesh.o parallel.o problem_class.o
 parallel.o: constants.o
 problem_class.o: fault_stress.o mesh.o
-solver.o: derivs_all.o friction.o ode_bs.o output.o parallel.o \
-	problem_class.o
+solver.o: derivs_all.o friction.o ode_bs.o ode_lsoda_main.o output.o \
+	parallel.o problem_class.o
