SEISMIC: Started implementing thermal pressurisation model (following Noda & Lapusta, 2010)

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,7 +11,7 @@ EXEC_PATH = .
 # GNU, serial
 #Only MPI no openMP
 F90 = mpif90
-#OPT = -O3 -Wall
+OPT = -O3 -Wall
 # For parallel runs with MPI+OpenMP:
 #F90 = mpif90
 #OPT = -O3 -Wall -fopenmp
@@ -22,9 +22,9 @@ F90 = mpif90
 # For parallel runs with OpenMP:
 #OPT = -O3 -ip -ipo -parallel -openmp -par-threshold:50
 #-no-inline-factor
-OPT = -O3 -pg -g
+#OPT = -O3 -pg -g
 #OPT = -O3
-#OPT = -Og -Wall -Wextra -pedantic -fimplicit-none -fcheck=all -fbacktrace
+#OPT = -Og -g -Wall -Wextra -pedantic -fimplicit-none -fcheck=all -fbacktrace
 #OPT = -O0 -warn all -C
 #OPT = -O0 -warn all -parallel -par-report3  -C
 #OPT = -O0 -g
