--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -17,5 +17,6 @@ okada.o: constants.o
 output.o: constants.o mesh.o parallel.o problem_class.o
 parallel.o: constants.o
 problem_class.o: fault_stress.o mesh.o
-solver.o: derivs_all.o diffusion_solver.o friction.o friction_cns.o ode_bs.o \
-	ode_lsoda_main.o ode_rk45.o output.o parallel.o problem_class.o
+solver.o: constants.o derivs_all.o diffusion_solver.o friction.o \
+	friction_cns.o ode_bs.o ode_lsoda_main.o ode_rk45.o output.o \
+	parallel.o problem_class.o
