Implementation of microphysical model (CNS), thermal pressurisation (TP), and other stuff

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,10 +11,10 @@ EXEC_PATH = .
 # GNU, serial
 #Only MPI no openMP
 F90 = mpif90
-#OPT = -O3 -Wall
+OPT = -O3 -Wall
 # For parallel runs with MPI+OpenMP:
 #F90 = mpif90
-#OPT = -O3 -Wall -fopenmp 
+#OPT = -O3 -Wall -fopenmp
 #OPT = -O2 -w
 #-- Intel Fortran --
 #F90 = ifort
@@ -22,7 +22,9 @@ F90 = mpif90
 # For parallel runs with OpenMP:
 #OPT = -O3 -ip -ipo -parallel -openmp -par-threshold:50
 #-no-inline-factor
-OPT = -O3 -openmp
+#OPT = -O3 -pg -g
+#OPT = -O3
+#OPT = -Og -g -Wall -Wextra -pedantic -fimplicit-none -fcheck=all -fbacktrace
 #OPT = -O0 -warn all -C
 #OPT = -O0 -warn all -parallel -par-report3  -C
 #OPT = -O0 -g
@@ -41,16 +43,16 @@ OPT = -O3 -openmp
 
 # 3. Set the compiler option that enables preprocessing in your compiler
 # ifort
-PREPROC = -fpp
+#PREPROC = -fpp
 # gfortran
-#PREPROC = -cpp
+PREPROC = -cpp
 
 #== END USER SETTINGS =============================================
 
 EXEC = $(EXEC_PATH)/qdyn
 
-OBJS := $(patsubst %.f90,%.o,$(wildcard *.f90)) 
-#OBJS := $($(wildcard *.f90):.f90=.o) 
+OBJS := $(patsubst %.f90,%.o,$(wildcard *.f90))
+#OBJS := $($(wildcard *.f90):.f90=.o)
 
 all: $(EXEC)
 
@@ -58,15 +60,15 @@ $(EXEC): $(OBJS)
 	$(F90) $(OPT) -o $@ $(OBJS) $(LIBS)
 
 clean:
-	rm -f $(EXEC) $(OBJS) *.M *.mod 
+	rm -f $(EXEC) $(OBJS) *.M *.mod
 
-.SUFFIXES: 
+.SUFFIXES:
 .SUFFIXES: .f90 .o
 
 %.o: %.f90
 	$(F90) $(OPT) -c $<
 
-# A special compilation rule for constants.f90: 
+# A special compilation rule for constants.f90:
 # Use a preprocessor directive (fpp) to define the path to the source files
 # This is needed only to find the kernel files
 constants.o: constants.f90
