Focus on compile for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,24 +11,25 @@ addons:
 
 before_install:
   # Install the latest version of Miniconda
-  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-  - chmod +x miniconda.sh
-  - ./miniconda.sh -b
-  - export PATH=/home/travis/miniconda2/bin:$PATH
-  - conda update --yes conda  # Update CONDA without command line prompt
+  # - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  # - chmod +x miniconda.sh
+  # - ./miniconda.sh -b
+  # - export PATH=/home/travis/miniconda2/bin:$PATH
+  # - conda update --yes conda  # Update CONDA without command line prompt
 
 install:
     # Compile code
   - cd $TRAVIS_BUILD_DIR/src/
+  - chmod +x mymakedepend.perl
   - ./mymakedepend.perl
   - make
-  # Create a new environment
-  - conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
-  # Activate it
-  - source activate test
-  # Install various dependencies
-  - conda install --yes numpy matplotlib pandas termcolor
+  # # Create a new environment
+  # - conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
+  # # Activate it
+  # - source activate test
+  # # Install various dependencies
+  # - conda install --yes numpy matplotlib pandas termcolor
 
 script:
-  - cd $TRAVIS_BUILD_DIR/test/
-  - python test/test_suite.py
+  # - cd $TRAVIS_BUILD_DIR/test/
+  # - python test/test_suite.py
