--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
   - cd $TRAVIS_BUILD_DIR/src/
   - chmod +x mymakedepend.perl
   - ./mymakedepend.perl
-  - make clean && make
+  - make clean && make travis
 
 script:
   - cd $TRAVIS_BUILD_DIR/test/
