Various updates - Fixed syntax highlighting - Added section numbers - Minor textual updates

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,7 @@
 name: QDYN
 markdown: kramdown
-highlighter: rouge
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    css_class: 'highlight'
