--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -2,7 +2,7 @@ derivs_all.o: diffusion_solver.o fault_stress.o friction.o friction_cns.o \
 	problem_class.o utils.o
 diffusion_solver.o: constants.o mesh.o problem_class.o
 fault_stress.o: constants.o fftsg.o logger.o mesh.o okada.o parallel.o
-friction.o: friction_cns.o logger.o problem_class.o
+friction.o: logger.o problem_class.o
 friction_cns.o: constants.o problem_class.o
 initialize.o: constants.o diffusion_solver.o fault_stress.o friction.o \
 	friction_cns.o logger.o mesh.o ode_rk45_2.o output.o parallel.o \
