--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,9 +26,9 @@ jobs:
     - name: Install compiler
       run: sudo apt install -y gfortran libopenmpi-dev
     - name: Copy mymakedepend
-      run: cp ./utils/devel_tools/mymakedepend.perl ./src
+      run: cp ./utils/devel_tools/mymakedepend.perl ./qdyn
     - name: Compile FORTRAN code
-      working-directory: ./src
+      working-directory: ./qdyn
       run: |
         chmod +x mymakedepend.perl
         ./mymakedepend.perl
