--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         # conda env update --file environment.yml --name base
         conda install --yes numpy scipy matplotlib pandas termcolor
+        pip install -e .
     - name: Install compiler
       run: sudo apt install -y gfortran libopenmpi-dev
     - name: Copy mymakedepend
