change executable path to src path

--- a/qdyn/Makefile
+++ b/qdyn/Makefile
@@ -2,10 +2,10 @@
 
 # 1. Modify the path to the executable file only if you really need to place it elsewhere.
 #    If you change it, when you call qdyn.m you must set the input EXEC_PATH as set here
-#EXEC_PATH = .
+EXEC_PATH = .
 #EXEC_PATH = $(HOME)/qdyn_svn/trunk/src/
 #EXEC_PATH = $(HOME)/bin/
-EXEC_PATH = /home/crodriguezpiceda/buildqdyn/qdyn_lastox_gnu/
+
 
 # 2. Comment/uncomment/add/modify the lines corresponding to your compiler:
 
