--- a/qdyn/Makefile
+++ b/qdyn/Makefile
@@ -10,10 +10,10 @@ EXEC_PATH = .
 # GNU, serial
 #Only MPI no openMP
 F90 = mpif90
-#OPT = -O3 -Wall
+OPT = -O3 -Wall
 # For parallel runs with MPI+OpenMP:
 #F90 = mpif90
-OPT = -O3 -Wall -fopenmp
+# OPT = -O3 -Wall -fopenmp
 #OPT = -O2 -w
 #-- Intel Fortran --
 # F90 = ifort
@@ -50,7 +50,7 @@ PREPROC = -cpp
 #CFLAGS = '' 
 
 test: F90 = mpif90
-	OPT = -O3 -Wall -fopenmp
+	OPT = -O3 -Wall
 	PREPROC = -cpp
 
 #== END USER SETTINGS =============================================
