Implementation restart model, fault labels and potency calculation (#83)
Tons of features and bug fixes related to logging/debugging, output, simulation restarts, ...

---------

Co-authored-by: Martijn van den Ende <martijnende@users.noreply.github.com>
Co-authored-by: Martijn van den Ende <martijnende@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,10 @@ qdyn/qdyn
 fort.*
 output_iasp
 output_ot_*
-output_ox
+output_ox*
 output_vmax
+output_fault
+log*
 
 # Simulation products
 *.in
